--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "tsx watch --env-file .env src/infra/server.ts",
+    "build": "tsup",
     "test": "vitest run --project unit",
     "test:e2e": "vitest run --project e2e"
   },
@@ -21,6 +22,7 @@
     "dotenv": "^17.2.3",
     "prisma": "^6.16.3",
     "supertest": "^7.1.4",
+    "tsup": "^8.5.0",
     "tsx": "^4.20.6",
     "typescript": "^5.9.3",
     "ultracite": "^5.4.5",
