--- a/fly.toml
+++ b/fly.toml
@@ -21,3 +21,6 @@ primary_region = 'gru'
   cpu_kind = 'shared'
   cpus = 1
   memory_mb = 512
+
+[deploy]
+  release_command = "npx prisma migrate deploy"
