--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
   },
   "dependencies": {
     "@fastify/cors": "^11.1.0",
+    "@fastify/swagger": "^9.5.2",
+    "@fastify/swagger-ui": "^5.2.3",
     "@prisma/client": "^6.16.3",
     "bcryptjs": "^3.0.2",
     "fastify": "^5.6.1",
