feat: authenticate user use case and controller with JWT token

--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,6 @@ PORT=3333
 
 # Prisma (Database)
 DATABASE_URL="postgresql://postgres:docker@localhost:5432/barbershop-project?schema=public"
+
+#JWT
+JWT_SECRET="JWT_SECRET_HERE"
