--- a/biome.jsonc
+++ b/biome.jsonc
@@ -1,30 +1,31 @@
 {
-	"$schema": "./node_modules/@biomejs/biome/configuration_schema.json",
-	"extends": ["ultracite"],
-	"javascript": {
-		"formatter": {
-			"semicolons": "asNeeded",
-			"quoteStyle": "single"
-		},
-		"parser": {
-			"unsafeParameterDecoratorsEnabled": true
-		}
-	},
-	"linter": {
-		"rules": {
-			"style": {
-				"noParameterProperties": "off",
-				"useConsistentMemberAccessibility": "off",
-				"useImportType": "off",
-				"useReadonlyClassProperties": "off",
-				"noMagicNumbers": "off"
-			},
-			"complexity": {
-				"noStaticOnlyClass": "off"
-			},
-			"nursery": {
-				"useConsistentTypeDefinitions": "off"
-			}
-		}
-	}
+  "$schema": "./node_modules/@biomejs/biome/configuration_schema.json",
+  "extends": ["ultracite"],
+  "javascript": {
+    "formatter": {
+      "semicolons": "asNeeded",
+      "quoteStyle": "single"
+    },
+    "parser": {
+      "unsafeParameterDecoratorsEnabled": true
+    }
+  },
+  "linter": {
+    "rules": {
+      "style": {
+        "noParameterProperties": "off",
+        "useConsistentMemberAccessibility": "off",
+        "useImportType": "off",
+        "useReadonlyClassProperties": "off",
+        "noMagicNumbers": "off",
+        "useNamingConvention": "off"
+      },
+      "complexity": {
+        "noStaticOnlyClass": "off"
+      },
+      "nursery": {
+        "useConsistentTypeDefinitions": "off"
+      }
+    }
+  }
 }
