--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "tsx": "^4.20.6",
     "typescript": "^5.9.3",
     "ultracite": "^5.4.5",
+    "vite": "^7.1.10",
     "vite-tsconfig-paths": "^5.1.4",
     "vitest": "^3.2.4"
   },
